--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Booleaner</title>
+
+  <link rel="stylesheet" href="./assets/style/style.css">
 </head>
 <body>
+
+  <header>
+    <img id="logo" src="./assets/img/logo.svg" alt="Logo The Booleaner">
+  </header>
   
 </body>
 </html>
