[add] article introduction (ie. title, images)

--- a/index.html
+++ b/index.html
@@ -1,17 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Booleaner</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>The Booleaner</title>
 
-  <link rel="stylesheet" href="./assets/style/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./assets/style/style.css" />
+  </head>
+  <body>
+    <header>
+      <img id="logo" src="./assets/img/logo.svg" alt="Logo The Booleaner" />
+    </header>
 
-  <header>
-    <img id="logo" src="./assets/img/logo.svg" alt="Logo The Booleaner">
-  </header>
-  
-</body>
+    <main>
+      <!-- Article introduction -->
+      <section>
+        <h1>
+          Internet deve essere al servizio del "bene pubblico": il manifesto di
+          Tim Berners-Lee
+        </h1>
+
+        <div>
+          <p class="text-grey">
+            <strong
+              >Scritto da <span class="text-blue">The Booleaner</span></strong
+            ><br />
+            il 10/10/2020
+          </p>
+        </div>
+
+        <div class="carousel">
+          <img
+            src="./assets/img/tim-1.jpg"
+            alt="Tim at Knight Foundation"
+            title="Tim at Knight Foundation"
+          />
+          <img
+            src="./assets/img/tim-2.jpg"
+            alt="Tim university"
+            title="Tim at university"
+          />
+        </div>
+
+        <p>
+          1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen
+          <br />
+          2nd Photo: Wikipedia, by Paul Clarke
+        </p>
+      </section>
+      <!-- /Article introduction -->
+    </main>
+  </body>
 </html>
