--- a/index.html
+++ b/index.html
@@ -169,5 +169,11 @@
       </p>
       <!-- /Article text: second part -->
     </main>
+
+    <footer>
+      <h2 class="text-grey">Potrebbero interessarti</h2>
+      <div class="article" id="monitor">Lorem ipsum dolor</div>
+      <div class="article" id="graph">Lorem ipsum dolor</div>
+    </footer>
   </body>
 </html>
