--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
 
     <link rel="stylesheet" href="./assets/style/style.css" />
+    <!-- <link rel="stylesheet" href="./assets/style/style-alt.css" /> -->
   </head>
   <body>
     <header>
